added functionality to specific operators.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="main-btn-container" id="keypad">
 
                         <div class="col left-col">
-                            <div class="btn dark-btn dark-btn-hover" data-type="operator">%</div>
+                            <div class="btn dark-btn dark-btn-hover" data-type="operator" data-value="%">%</div>
 
                             <div class="btn dark-btn dark-btn-hover" data-type="operator" data-value="√">&radic;</div>
 
@@ -160,12 +160,12 @@
                                 x<sup>3</sup></div>
 
                             <div class="btn dark-btn dark-btn-hover custom-font" data-type="operator"
-                                data-value="reverse">
+                                data-value="1/">
                                 <sup>1</sup>/x</div>
                         </div>
 
                         <div class="col">
-                            <div class="btn dark-btn top-row-btn dark-btn-hover" data-type="operator">%</div>
+                            <div class="btn dark-btn top-row-btn dark-btn-hover" data-type="operator" data-value="%">%</div>
 
                             <div class="btn dark-btn dark-btn-hover" data-type="ce">CE</div>
 
@@ -214,7 +214,7 @@
 
                         <div class="col">
                             <div class="btn dark-btn top-row-btn dark-btn-hover custom-font" data-type="operator"
-                                data-value="reverse">
+                                data-value="1/">
                                 <sup>1</sup>/x</div>
 
                             <div class="btn opr-btn opr-btn-hover" data-type="operator" data-value="÷">&divide;</div>
