All the DOM codes moved to app.js file.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div class="main-btn-container" id="keypad">
+                    <div class="main-btn-container keypad" id="keypad">
 
                         <div class="col left-col">
                             <div class="btn dark-btn dark-btn-hover" data-type="operator" data-value="%">%</div>
@@ -230,7 +230,7 @@
 
                     </div>
 
-                    <div class="main-btn-container memory-tab" id="memory">
+                    <div class="main-btn-container memory-tab memorypad" id="memory">
                         <div class="memory-tab-body">
                             <ul class="memory-list" id="memoryList2">
                                 <li>There's nothing saved in memory</li>
@@ -247,7 +247,7 @@
                         </div>
                     </div>
 
-                    <div class="main-btn-container memory-tab" id="history">
+                    <div class="main-btn-container memory-tab historypad" id="history">
                         <div class="memory-tab-body">
                             <ul class="memory-list" id="historyList2">
                                 <li>There's no history yet</li>
