--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             globals: {
                 txtResult: "",
                 txtExpression: "",
+                lastResult: "",
                 recalled: false
             }
         }
